---
source: crates/sith_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..18,
                value: Lambda(
                    LambdaExpr {
                        range: 0..18,
                        parameters: Some(
                            Parameters {
                                range: 7..11,
                                posonlyargs: [],
                                args: [
                                    ParameterWithDefault {
                                        range: 7..8,
                                        parameter: Parameter {
                                            range: 7..8,
                                            name: Identifier {
                                                id: "x",
                                                range: 7..8,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                    ParameterWithDefault {
                                        range: 10..11,
                                        parameter: Parameter {
                                            range: 10..11,
                                            name: Identifier {
                                                id: "y",
                                                range: 10..11,
                                            },
                                            annotation: None,
                                        },
                                        default: None,
                                    },
                                ],
                                vararg: None,
                                kwonlyargs: [],
                                kwarg: None,
                            },
                        ),
                        body: BinOp(
                            BinOpExpr {
                                range: 13..18,
                                left: Name(
                                    NameExpr {
                                        range: 13..14,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                op: Mult,
                                right: Name(
                                    NameExpr {
                                        range: 17..18,
                                        id: "y",
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
